--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "pretty-fullscreen-signup",
+  "name": "vue-cascading-signup",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "build-bundle": "vue-cli-service build --target lib --name vue-cascading-signup ./src/components/index.js"
   },
   "dependencies": {
     "vue": "^2.5.17"
@@ -23,5 +23,13 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
+  ],
+  "main": "./dist/vue-cascading-signup.common.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
   ]
 }
